--- a/UIKitApp/Base.lproj/Main.storyboard
+++ b/UIKitApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,81 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIKitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ynh-tS-eWm">
+                                <rect key="frame" x="50" y="84" width="314" height="32"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                                <connections>
+                                    <action selector="changeSegment" destination="BYZ-38-t0r" eventType="valueChanged" id="IGh-My-E3Q"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uf0-z4-3r6">
+                                <rect key="frame" x="50" y="165" width="314" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bQR-zG-KVL">
+                                <rect key="frame" x="48" y="235.5" width="318" height="31"/>
+                                <connections>
+                                    <action selector="changeSlider" destination="BYZ-38-t0r" eventType="valueChanged" id="lVP-bl-ubx"/>
+                                </connections>
+                            </slider>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="w6v-Ly-G5D">
+                                <rect key="frame" x="50" y="315.5" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eec-D8-Owr">
+                                <rect key="frame" x="157" y="399.5" width="100" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Wly-kh-8Ml"/>
+                                    <constraint firstAttribute="width" constant="100" id="gHj-F9-wTc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="doneButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="tp5-7E-7AK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="w6v-Ly-G5D" firstAttribute="top" secondItem="bQR-zG-KVL" secondAttribute="bottom" constant="50" id="1zH-Gq-1rD"/>
+                            <constraint firstItem="bQR-zG-KVL" firstAttribute="top" secondItem="uf0-z4-3r6" secondAttribute="bottom" constant="50" id="9m3-BE-ssn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bQR-zG-KVL" secondAttribute="trailing" constant="50" id="NZT-Eo-TG4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uf0-z4-3r6" secondAttribute="trailing" constant="50" id="PZN-Fg-dUw"/>
+                            <constraint firstItem="Ynh-tS-eWm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="TMQ-JI-PXE"/>
+                            <constraint firstItem="uf0-z4-3r6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="cgF-Dq-E3g"/>
+                            <constraint firstItem="Eec-D8-Owr" firstAttribute="top" secondItem="w6v-Ly-G5D" secondAttribute="bottom" constant="50" id="dnm-yU-rlz"/>
+                            <constraint firstItem="Eec-D8-Owr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="efK-Lt-GfA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ynh-tS-eWm" secondAttribute="trailing" constant="50" id="en8-cO-HRe"/>
+                            <constraint firstItem="Ynh-tS-eWm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="jai-lx-JYC"/>
+                            <constraint firstItem="bQR-zG-KVL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="niu-yp-qag"/>
+                            <constraint firstItem="w6v-Ly-G5D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="oyQ-g1-9wN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w6v-Ly-G5D" secondAttribute="trailing" constant="50" id="ss1-X0-ITs"/>
+                            <constraint firstItem="uf0-z4-3r6" firstAttribute="top" secondItem="Ynh-tS-eWm" secondAttribute="bottom" constant="50" id="zYQ-I9-vMD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="button" destination="Eec-D8-Owr" id="qxd-0U-35J"/>
+                        <outlet property="mainLabel" destination="uf0-z4-3r6" id="rgZ-dy-TjD"/>
+                        <outlet property="segmentedControl" destination="Ynh-tS-eWm" id="gHJ-TM-umV"/>
+                        <outlet property="slider" destination="bQR-zG-KVL" id="crm-ph-DlB"/>
+                        <outlet property="textField" destination="w6v-Ly-G5D" id="byJ-cw-kdT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-19" y="124"/>
         </scene>
     </scenes>
 </document>
