--- a/UIKitApp/Base.lproj/Main.storyboard
+++ b/UIKitApp/Base.lproj/Main.storyboard
@@ -12,70 +12,95 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIKitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ynh-tS-eWm">
-                                <rect key="frame" x="50" y="84" width="314" height="32"/>
-                                <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
-                                </segments>
-                                <connections>
-                                    <action selector="changeSegment" destination="BYZ-38-t0r" eventType="valueChanged" id="IGh-My-E3Q"/>
-                                </connections>
-                            </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uf0-z4-3r6">
-                                <rect key="frame" x="50" y="165" width="314" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bQR-zG-KVL">
-                                <rect key="frame" x="48" y="235.5" width="318" height="31"/>
-                                <connections>
-                                    <action selector="changeSlider" destination="BYZ-38-t0r" eventType="valueChanged" id="lVP-bl-ubx"/>
-                                </connections>
-                            </slider>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="w6v-Ly-G5D">
-                                <rect key="frame" x="50" y="315.5" width="314" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eec-D8-Owr">
-                                <rect key="frame" x="157" y="399.5" width="100" height="50"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zWz-CB-yEG">
+                                <rect key="frame" x="10" y="44" width="394" height="922"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eec-D8-Owr">
+                                        <rect key="frame" x="147" y="335.5" width="100" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Wly-kh-8Ml"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="gHj-F9-wTc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="doneButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="tp5-7E-7AK"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uf0-z4-3r6">
+                                        <rect key="frame" x="50" y="101" width="294" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="w6v-Ly-G5D">
+                                        <rect key="frame" x="50" y="251.5" width="294" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ynh-tS-eWm">
+                                        <rect key="frame" x="50" y="20" width="294" height="32"/>
+                                        <segments>
+                                            <segment title="First"/>
+                                            <segment title="Second"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="changeSegment" destination="BYZ-38-t0r" eventType="valueChanged" id="IGh-My-E3Q"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bQR-zG-KVL">
+                                        <rect key="frame" x="48" y="171.5" width="298" height="31"/>
+                                        <connections>
+                                            <action selector="changeSlider" destination="BYZ-38-t0r" eventType="valueChanged" id="lVP-bl-ubx"/>
+                                        </connections>
+                                    </slider>
+                                    <datePicker contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="9Xe-7h-aIp">
+                                        <rect key="frame" x="0.0" y="435.5" width="394" height="216"/>
+                                        <connections>
+                                            <action selector="datePickerChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="Kx9-je-K7U"/>
+                                        </connections>
+                                    </datePicker>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Wly-kh-8Ml"/>
-                                    <constraint firstAttribute="width" constant="100" id="gHj-F9-wTc"/>
+                                    <constraint firstItem="9Xe-7h-aIp" firstAttribute="top" secondItem="Eec-D8-Owr" secondAttribute="bottom" constant="50" id="99M-Om-vpX"/>
+                                    <constraint firstItem="Eec-D8-Owr" firstAttribute="top" secondItem="w6v-Ly-G5D" secondAttribute="bottom" constant="50" id="AW2-UR-3Ds"/>
+                                    <constraint firstItem="uf0-z4-3r6" firstAttribute="top" secondItem="Ynh-tS-eWm" secondAttribute="bottom" constant="50" id="CnX-aT-XF5"/>
+                                    <constraint firstItem="f6a-KM-QIn" firstAttribute="trailing" secondItem="uf0-z4-3r6" secondAttribute="trailing" constant="50" id="ENN-vE-vhv"/>
+                                    <constraint firstItem="bQR-zG-KVL" firstAttribute="top" secondItem="uf0-z4-3r6" secondAttribute="bottom" constant="50" id="EwZ-jH-Ytl"/>
+                                    <constraint firstItem="uf0-z4-3r6" firstAttribute="leading" secondItem="f6a-KM-QIn" secondAttribute="leading" constant="50" id="IBf-K1-cZR"/>
+                                    <constraint firstItem="bQR-zG-KVL" firstAttribute="leading" secondItem="f6a-KM-QIn" secondAttribute="leading" constant="50" id="OMH-yY-WYX"/>
+                                    <constraint firstItem="9Xe-7h-aIp" firstAttribute="leading" secondItem="f6a-KM-QIn" secondAttribute="leading" id="QKs-S4-lyC"/>
+                                    <constraint firstItem="f6a-KM-QIn" firstAttribute="trailing" secondItem="w6v-Ly-G5D" secondAttribute="trailing" constant="50" id="Xmc-LR-A5Q"/>
+                                    <constraint firstItem="f6a-KM-QIn" firstAttribute="trailing" secondItem="bQR-zG-KVL" secondAttribute="trailing" constant="50" id="o8c-U8-aWC"/>
+                                    <constraint firstItem="w6v-Ly-G5D" firstAttribute="leading" secondItem="f6a-KM-QIn" secondAttribute="leading" constant="50" id="p6N-5L-Cwa"/>
+                                    <constraint firstItem="f6a-KM-QIn" firstAttribute="trailing" secondItem="Ynh-tS-eWm" secondAttribute="trailing" constant="50" id="spp-qj-me4"/>
+                                    <constraint firstItem="Ynh-tS-eWm" firstAttribute="top" secondItem="f6a-KM-QIn" secondAttribute="top" constant="20" id="t19-6e-z2U"/>
+                                    <constraint firstItem="Eec-D8-Owr" firstAttribute="centerX" secondItem="zWz-CB-yEG" secondAttribute="centerX" id="u6H-tw-Yhm"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ynh-tS-eWm" secondAttribute="trailing" constant="233" id="vYJ-s3-G2e"/>
+                                    <constraint firstItem="9Xe-7h-aIp" firstAttribute="trailing" secondItem="f6a-KM-QIn" secondAttribute="trailing" id="waG-mc-FlO"/>
+                                    <constraint firstItem="Ynh-tS-eWm" firstAttribute="leading" secondItem="f6a-KM-QIn" secondAttribute="leading" constant="50" id="yub-I9-iXV"/>
+                                    <constraint firstItem="w6v-Ly-G5D" firstAttribute="top" secondItem="bQR-zG-KVL" secondAttribute="bottom" constant="50" id="z9g-7v-ggv"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Done"/>
-                                <connections>
-                                    <action selector="doneButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="tp5-7E-7AK"/>
-                                </connections>
-                            </button>
+                                <viewLayoutGuide key="contentLayoutGuide" id="gu4-X7-bPP"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="f6a-KM-QIn"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="w6v-Ly-G5D" firstAttribute="top" secondItem="bQR-zG-KVL" secondAttribute="bottom" constant="50" id="1zH-Gq-1rD"/>
-                            <constraint firstItem="bQR-zG-KVL" firstAttribute="top" secondItem="uf0-z4-3r6" secondAttribute="bottom" constant="50" id="9m3-BE-ssn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bQR-zG-KVL" secondAttribute="trailing" constant="50" id="NZT-Eo-TG4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uf0-z4-3r6" secondAttribute="trailing" constant="50" id="PZN-Fg-dUw"/>
-                            <constraint firstItem="Ynh-tS-eWm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="TMQ-JI-PXE"/>
-                            <constraint firstItem="uf0-z4-3r6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="cgF-Dq-E3g"/>
-                            <constraint firstItem="Eec-D8-Owr" firstAttribute="top" secondItem="w6v-Ly-G5D" secondAttribute="bottom" constant="50" id="dnm-yU-rlz"/>
-                            <constraint firstItem="Eec-D8-Owr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="efK-Lt-GfA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ynh-tS-eWm" secondAttribute="trailing" constant="50" id="en8-cO-HRe"/>
-                            <constraint firstItem="Ynh-tS-eWm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="jai-lx-JYC"/>
-                            <constraint firstItem="bQR-zG-KVL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="niu-yp-qag"/>
-                            <constraint firstItem="w6v-Ly-G5D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="oyQ-g1-9wN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w6v-Ly-G5D" secondAttribute="trailing" constant="50" id="ss1-X0-ITs"/>
-                            <constraint firstItem="uf0-z4-3r6" firstAttribute="top" secondItem="Ynh-tS-eWm" secondAttribute="bottom" constant="50" id="zYQ-I9-vMD"/>
+                            <constraint firstItem="zWz-CB-yEG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0pe-T1-rB6"/>
+                            <constraint firstItem="zWz-CB-yEG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="BhI-3H-Bf1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zWz-CB-yEG" secondAttribute="trailing" constant="10" id="b0r-Ue-1Us"/>
+                            <constraint firstItem="zWz-CB-yEG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xmg-wg-XmK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <size key="freeformSize" width="414" height="1000"/>
                     <connections>
                         <outlet property="button" destination="Eec-D8-Owr" id="qxd-0U-35J"/>
+                        <outlet property="datePicker" destination="9Xe-7h-aIp" id="pwg-cG-GQ1"/>
                         <outlet property="mainLabel" destination="uf0-z4-3r6" id="rgZ-dy-TjD"/>
                         <outlet property="segmentedControl" destination="Ynh-tS-eWm" id="gHJ-TM-umV"/>
                         <outlet property="slider" destination="bQR-zG-KVL" id="crm-ph-DlB"/>
@@ -84,7 +109,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-19" y="124"/>
+            <point key="canvasLocation" x="85.507246376811594" y="-14.0625"/>
         </scene>
     </scenes>
 </document>
